--- a/iotdb/prod/iotdb-confignode/Chart.yaml
+++ b/iotdb/prod/iotdb-confignode/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: iotdb-confignode
-description: A Helm chart for Kubernetes
+description: A Helm chart for iotdb-cn generate by CHATGPT
 
 # A chart can be either an 'application' or a 'library' chart.
 #
