--- a/iotdb/prod/iotdb-datanode/Chart.yaml
+++ b/iotdb/prod/iotdb-datanode/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: iotdb-confignode
-description: A Helm chart for Kubernetes
+name: iotdb-datanode
+description: A Helm chart for iotdb-dn generate by CHATGPT
 
 # A chart can be either an 'application' or a 'library' chart.
 #
