--- a/iotdb/prod/iotdb-datanode/templates/service-headless.yaml
+++ b/iotdb/prod/iotdb-datanode/templates/service-headless.yaml
@@ -14,4 +14,5 @@ spec:
   {{- end }}
   selector:
     {{- include "iotdb-chart.selectorLabels" . | nindent 4 }}
+  clusterIP: None
   type: {{ .Values.service.type }}
