--- a/iotdb/prod/iotdb-datanode/templates/service-headless.yaml
+++ b/iotdb/prod/iotdb-datanode/templates/service-headless.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "iotdb-chart.fullname" . }}
+  name: {{ include "iotdb-chart.fullname" . }}-headless
   labels:
     {{- include "iotdb-chart.labels" . | nindent 4 }}
 spec:
