--- a/iotdb/prod/iotdb-datanode/templates/service-external.yaml
+++ b/iotdb/prod/iotdb-datanode/templates/service-external.yaml
@@ -1,22 +1,22 @@
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: {{ include "iotdb-chart.fullname" . }}-external
-# spec:
-#   ports:
-#   - name: tcp-6667
-#     port: 6667
-#     protocol: TCP
-#     targetPort: 6667
-#   - name: tcp-9091
-#     port: 9091
-#     protocol: TCP
-#     targetPort: 9091
-#   - name: tcp-9092
-#     port: 9092
-#     protocol: TCP
-#     targetPort: 9092
-#   selector:
-#     app: iotdb
-#   type: LoadBalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "iotdb-chart.fullname" . }}-external
+spec:
+  ports:
+  - name: tcp-6667
+    port: 6667
+    protocol: TCP
+    targetPort: 6667
+  - name: tcp-9091
+    port: 9091
+    protocol: TCP
+    targetPort: 9091
+  - name: tcp-9092
+    port: 9092
+    protocol: TCP
+    targetPort: 9092
+  selector:
+    app.kubernetes.io/instance: {{- include "iotdb-chart.labels" . | nindent 4 }}
+  type: LoadBalancer
