--- a/gitlab/gitlab.yml
+++ b/gitlab/gitlab.yml
@@ -1,163 +1,16 @@
 ---
-# gitlab-redis.yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: redis
-  namespace: gitlab
-  labels:
-    name: redis
-spec:
-  selector:
-    matchLabels:
-      name: redis
-  template:
-    metadata:
-      name: redis
-      labels:
-        name: redis
-    spec:
-      containers:
-        - name: redis
-          image: sameersbn/redis:4.0.9-3
-          imagePullPolicy: IfNotPresent
-          ports:
-            - name: redis
-              containerPort: 6379
-          volumeMounts:
-            - mountPath: /var/lib/redis
-              name: data
-          livenessProbe:
-            exec:
-              command:
-                - redis-cli
-                - ping
-            initialDelaySeconds: 30
-            timeoutSeconds: 5
-          readinessProbe:
-            exec:
-              command:
-                - redis-cli
-                - ping
-            initialDelaySeconds: 30
-            timeoutSeconds: 1
-      volumes:
-        - name: data
-          emptyDir: {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis
-  namespace: gitlab
-  labels:
-    name: redis
-spec:
-  ports:
-    - name: redis
-      port: 6379
-      targetPort: redis
-  selector:
-    name: redis
----
-# gitlab-postgresql.yaml
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgresql-pvc
-  namespace: gitlab
-spec:
-  storageClassName: csi-disk
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 20Gi
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: postgresql
-  namespace: gitlab
-  labels:
-    name: postgresql
-spec:
-  selector:
-    matchLabels:
-      name: postgresql
-  template:
-    metadata:
-      name: postgresql
-      labels:
-        name: postgresql
-    spec:
-      containers:
-        - name: postgresql
-          image: sameersbn/postgresql:12-20200524
-          imagePullPolicy: IfNotPresent
-          env:
-            - name: DB_USER
-              value: gitlab
-            - name: DB_PASS
-              value: passw0rd
-            - name: DB_NAME
-              value: gitlab_production
-            - name: DB_EXTENSION
-              value: pg_trgm,btree_gist
-            - name: USERMAP_UID
-              value: '999'
-            - name: USERMAP_GID
-              value: '999'
-          ports:
-            - name: postgres
-              containerPort: 5432
-          volumeMounts:
-            - mountPath: /var/lib/postgresql
-              name: data
-          readinessProbe:
-            exec:
-              command:
-                - pg_isready
-                - -h
-                - localhost
-                - -U
-                - postgres
-            initialDelaySeconds: 30
-            timeoutSeconds: 1
-      volumes:
-        - name: data
-          persistentVolumeClaim:
-            claimName: postgresql-pvc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgresql
-  namespace: gitlab
-  labels:
-    name: postgresql
-spec:
-  ports:
-    - name: postgres
-      port: 5432
-      targetPort: postgres
-  selector:
-    name: postgresql
-
----
-# gitlab.yaml
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: gitlab-pvc
   namespace: gitlab
 spec:
-  storageClassName: csi-disk
   accessModes:
     - ReadWriteOnce
+  storageClassName: csi-disk-topology
   resources:
     requests:
-      storage: 20Gi
+      storage: 10Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -167,6 +20,7 @@ metadata:
   labels:
     name: gitlab
 spec:
+  replicas: 1
   selector:
     matchLabels:
       name: gitlab
@@ -176,18 +30,9 @@ spec:
       labels:
         name: gitlab
     spec:
-      initContainers:
-        - name: fix-permissions
-          image: busybox:1.35.0
-          command: ['sh', '-c', 'chown -R 1000:1000 /home/git/data']
-          securityContext:
-            privileged: true
-          volumeMounts:
-            - name: data
-              mountPath: /home/git/data
       containers:
         - name: gitlab
-          image: sameersbn/gitlab:15.1.0
+          image: sameersbn/gitlab:11.8.1
           imagePullPolicy: IfNotPresent
           env:
             - name: TZ
@@ -201,17 +46,19 @@ spec:
             - name: GITLAB_SECRETS_OTP_KEY_BASE
               value: long-and-random-alpha-numeric-string
             - name: GITLAB_ROOT_PASSWORD
-              value: novastar
+              value: admin321
             - name: GITLAB_ROOT_EMAIL
-              value: wangxu@novastar.tech
+              value: gitlab@163.com
             - name: GITLAB_HOST
-              value: gitlab.k8s.novastar
+              value: 60.204.218.98
             - name: GITLAB_PORT
-              value: '80'
+              value: "30180"
+            - name: GITLAB_SSH_PORT
+              value: "30022"
             - name: GITLAB_NOTIFY_ON_BROKEN_BUILDS
-              value: 'true'
+              value: "true"
             - name: GITLAB_NOTIFY_PUSHER
-              value: 'false'
+              value: "false"
             - name: GITLAB_BACKUP_SCHEDULE
               value: daily
             - name: GITLAB_BACKUP_TIME
@@ -219,9 +66,9 @@ spec:
             - name: DB_TYPE
               value: postgres
             - name: DB_HOST
-              value: postgresql
+              value: postgresql-svc
             - name: DB_PORT
-              value: '5432'
+              value: "5432"
             - name: DB_USER
               value: gitlab
             - name: DB_PASS
@@ -229,9 +76,9 @@ spec:
             - name: DB_NAME
               value: gitlab_production
             - name: REDIS_HOST
-              value: redis
+              value: redis-svc
             - name: REDIS_PORT
-              value: '6379'
+              value: "6379"
           ports:
             - name: http
               containerPort: 80
@@ -240,12 +87,18 @@ spec:
           volumeMounts:
             - mountPath: /home/git/data
               name: data
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 600
+            timeoutSeconds: 5
           readinessProbe:
             httpGet:
               path: /
               port: 80
-            initialDelaySeconds: 60
-            timeoutSeconds: 1
+            initialDelaySeconds: 600
+            timeoutSeconds: 2
       volumes:
         - name: data
           persistentVolumeClaim:
@@ -263,25 +116,11 @@ spec:
     - name: http
       port: 80
       targetPort: http
+      nodePort: 30180
+    - name: ssh
+      port: 22
+      targetPort: ssh
+      nodePort: 30022
   selector:
     name: gitlab
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: gitlab
-  namespace: gitlab
-  annotations:
-    kubernetes.io/ingress.class: nginx
-spec:
-  rules:
-    - host: gitlab.k8s.novastar
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: gitlab
-                port:
-                  number: 80
+  type: NodePort	
