--- a/iotdb/prod/iotdb-datanode/values-1c1d.yaml
+++ b/iotdb/prod/iotdb-datanode/values-1c1d.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: novastar-registry.cn-hangzhou.cr.aliyuncs.com/novacloud/apache/iotdb
+  repository: apache/iotdb
   tag: 1.1.2-datanode
   pullPolicy: IfNotPresent
 
